# name: test_remove[uvloop-404][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'permissions': <class 'list'> [
      ],
    },
  ]
---
# name: test_remove[uvloop-None][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'permissions': <class 'list'> [
      ],
    },
  ]
---
# name: test_update_permissions[uvloop-404][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'administrator': True,
      'api_keys': <class 'list'> [
      ],
      'force_reset': False,
      'groups': <class 'list'> [
      ],
      'handle': 'bob',
      'invalidate_sessions': False,
      'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
      'password': b'$2b$12$0aC1WPkTG.up/KQb3KcQVOMkMbThtjMMrFfG5tiILY2cUMVcnEW0.',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technician',
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'administrator': False,
      'created_at': datetime.datetime(1975, 6, 18, 13, 59, 8),
      'groups': <class 'list'> [
        'test',
      ],
      'handle': 'leeashley',
      'permissions': <class 'list'> [
      ],
      'primary_group': 'technicians',
      'username': 'leeashley',
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'administrator': False,
      'created_at': datetime.datetime(2022, 3, 21, 13, 6, 59),
      'groups': <class 'list'> [
      ],
      'handle': 'johnsoncynthia',
      'permissions': <class 'list'> [
      ],
      'primary_group': 'technicians',
      'username': 'johnsoncynthia',
    },
  ]
---
# name: test_update_permissions[uvloop-None][db]
  <class 'dict'> {
    '_id': 'test',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: test_update_permissions[uvloop-None][json]
  <class 'dict'> {
    'id': 'test',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: test_update_permissions[uvloop-None][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'administrator': True,
      'api_keys': <class 'list'> [
      ],
      'force_reset': False,
      'groups': <class 'list'> [
      ],
      'handle': 'bob',
      'invalidate_sessions': False,
      'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
      'password': b'$2b$12$0aC1WPkTG.up/KQb3KcQVOMkMbThtjMMrFfG5tiILY2cUMVcnEW0.',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technician',
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'administrator': False,
      'created_at': datetime.datetime(1975, 6, 18, 13, 59, 8),
      'groups': <class 'list'> [
        'test',
      ],
      'handle': 'leeashley',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technicians',
      'username': 'leeashley',
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'administrator': False,
      'created_at': datetime.datetime(2022, 3, 21, 13, 6, 59),
      'groups': <class 'list'> [
      ],
      'handle': 'johnsoncynthia',
      'permissions': <class 'list'> [
      ],
      'primary_group': 'technicians',
      'username': 'johnsoncynthia',
    },
  ]
---
